app/main/default/objects/Meta_Setting__mdt/fields/Text_2__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Text_2__c</fullName>
        <label>Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>