app/main/default/objects/Meta_Setting__mdt/fields/Text_3__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Text_3__c</fullName>
        <label>Text 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>