app/main/default/objects/Meta_Setting__mdt/fields/Text__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>